tests/ui/pattern/usefulness/match-privately-empty.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/match-privately-empty.rs:13:11
   |
LL |     match private::DATA {
   |           ^^^^^^^^^^^^^ pattern `Some(Private { misc: true, .. })` not covered
   |
   = note: the matched value is of type `Option<Private>`
help: ensure that all possible cases are being handled by adding an arm to handle the `Some(Private { misc: true, .. })` case
   |
LL ~         }) => {}
LL +         Some(Private { misc: true, .. }) => { todo!() },
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
